# opengl-orthographic-perspective-vice-versa

./: CMakeLists.txt
include/glad/: glad.h
shaders/: triangle.glsl  vs_ortho.glsl  vs_perspective.glsl
src/: fs.glsl  glad.c  main.cpp  vs_ortho.glsl  vs_perspective.glsl
